<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InteriorDesign">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:text="@string/read_more"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/rate"
        style="@style/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view15"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="250dp"
        android:numStars="5"
        android:rating="0.5" />

    <ImageView
        android:id="@+id/view10"
        android:layout_width="24dp"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/menu" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="33dp"

        android:layout_marginEnd="101dp"
        android:layout_toStartOf="@+id/view10"
        android:text="@string/interior_design"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/view13"
        android:layout_width="30dp"
        android:layout_height="27dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/ic_round_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp"
        android:text="@string/portfolio"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:text="@string/con"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view15"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:text="@string/details"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/cont"
        android:textSize="15sp" />

    <View
        android:id="@+id/view15"
        android:layout_width="342dp"
        android:layout_height="256dp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="30dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="71dp"
        android:layout_height="79dp"
        android:layout_alignTop="@+id/view15"
        android:layout_alignEnd="@+id/view15"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="-2dp"
        app:srcCompat="@drawable/t9"
        android:contentDescription="@string/h" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="68dp"
        android:layout_height="77dp"
        android:layout_below="@+id/imageView10"
        android:layout_alignEnd="@+id/view15"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/t0"
        android:contentDescription="@string/h" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="67dp"
        android:layout_height="73dp"
        android:layout_alignEnd="@+id/view15"
        android:layout_alignBottom="@+id/view15"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:srcCompat="@drawable/t4"
        android:contentDescription="@string/h" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="294dp"
        android:layout_height="260dp"
        android:layout_alignStart="@+id/view15"
        android:layout_alignBottom="@+id/view15"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="-3dp"
        app:srcCompat="@drawable/tt"
        android:contentDescription="@string/h" />


</RelativeLayout>