<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStart">

    <View
        android:id="@+id/view4"
        android:layout_width="20dp"
        android:layout_height="10dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/oval"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view3"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view2"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="264dp"
        android:layout_height="131dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/home_decors"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="286dp"
        android:layout_height="259dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="176dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/main_page"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="255dp"
        android:layout_height="81dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="71dp"
        android:gravity="center"
        android:text="@string/we_insure_each_order_for_the_amount_500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="343dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="#24D3C0"
        android:fontFamily="sans-serif-black"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_above="@+id/getStarted"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="MissingConstraints" />

</RelativeLayout>